# music_generator

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
backend/app/: __init__.py  config.py  database.py  main.py  models.py  routes.py  safety.py  scenes.py  schemas.py  service.py
backend/app/providers/: __init__.py  base.py  local_loop.py  mock.py  mubert.py  stable_audio.py
backend/tests/: conftest.py  test_api.py  test_providers.py  test_safety.py
docs/: PROVIDERS.md
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AudioPlayer.tsx  CopyrightNotice.tsx  HistoryList.tsx  ParameterControls.tsx  SceneSelector.tsx  Waveform.tsx
frontend/lib/: api.ts  format.ts  types.ts
