[project]
name = "royalty-free-music-generator-backend"
version = "0.1.0"
description = "FastAPI backend for the royalty-free music generator"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are meant to be call defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]
